Configurado CSS e arquivo html para modificar a configuração da cor do botão

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,30 @@
         <title>
             Pagina Arduino
         </title>
+        <link href="/css/main.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Arduino data</h1>
-        <p>Precione o botão na aplicacao do arduino para mudar a cor aqui</p>
-        <p>o botão esta <span id="button-state"></span></p>
-        <svg width="120" height="120" viewBox="0 0 120 120">
-            <rect id="change-color"
-            fill="LightSkyBlue"
-            width="120"
-            height="120"
-            />
-        </svg>
+            <header>
+                <h1>Sending DATA</h1>
+                <h2>Getting data from the front end to an Arduino</h2>
+            </header>
+            <div id="content">
+                <div class="container">
+                    <div id="red-block" class="color-block"></div>
+                    <div id="green-block" class="color-block"></div>
+                    <div class="text-block">
+                        <p>Pressing a Button Will Send Data to a Connected Arduino</p>
+                        <p>This data will determine which LED is turned on or off.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha256-bQmrZe4yPnQrLTY+1gYylfNMBuGfnT/HKsCGX+9Xuqo=" crossorigin="anonymous"></script>
-        <script>
+        <script src="javascript/main.js"></script>
+        <!-- <script>
         var socket = io();
         var current = "0";
         var shape = document.getElementById('change-color');
@@ -40,6 +50,6 @@
             //console.warn("dados current : "+current);
         });
         
-        </script>
+        </script> -->
     </body>
 </html>
